aws/practise/k8s/backenddeploymentfile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: backend-deployment
   namespace: library
spec:
  replicas: 3
  selector:
     matchLabels:
       app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
       containers:
          - name: backend-container
            image: heyrohhh/empbackend:v4
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 9000
            livenessProbe:
                httpGet:
                   path: /health
                   port: 9000
                initialDelaySeconds: 30
                periodSeconds: 15
                failureThreshold: 3
            readinessProbe:
                 httpGet:
                   path: /ready
                   port: 9000
                 initialDelaySeconds: 30
                 periodSeconds: 15
                 successThreshold: 1
                 failureThreshold: 3
            resources:
                 requests:
                    cpu: 128m
                    memory: 128Mi
                 limits: 
                     cpu: 256m
                     memory: 512Mi
---
# service for backend

apiVersion: v1
kind: Service
metadata: 
   name: backend-service
   namespace: library
spec:
 type: ClusterIP
 selector:
   app: backend
 ports:
   - protocol: TCP
     port: 9000
     targetPort: 9000
