aws/practise/k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: database-deployment
   namespace: library
spec:
  replicas: 1
  selector:
   matchLabels:
     app: database
  template:
    metadata:
     labels:
       app: database
    spec:
     containers:
       - name: my-sql
         image: mysql:8.0
         imagePullPolicy: IfNotPresent
         ports:
          - name: sql
            containerPort: 3306
         volumeMounts:
             - name: mysqlvolume
               mountPath: /var/lib/mysql
             - name: init-script
               mountPath: /docker-entrypoint-initdb.d/
     volumes:
       - name: mysqlvolume
         persistentVolumeClaim:
          claimName: pvc
       - name: init-script
         configMap:
            name: book-manage
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: library
spec:
  selector:
     app: database
  ports:
       - protocol: TCP
         port: 3306
         targetPort: 3306
  type: ClusterIP
